# fortwo

./: .dockerignore  Dockerfile  README.md  pyproject.toml  runtime.txt
.devcontainer/: devcontainer.json
streamlitapp/: audio.py  browser.py  fortytwo.py  openai_audio.py  pdfgenerator.py  systemprompt.py  vision.py
streamlitapp/logo/: 42.jfif  ap.jfif  baby.jfif  lgo.jfif  logo.jfif  stimage.jfif
