[tool.poetry]
name = "streamlitapp"
version = "0.1.0"
description = ""
authors = ["Kelvin Ndeti <kelvinndeti3142@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
requests = "^2.32.3"
langchain-community = "^0.2.1"
langchain-core = "^0.2.3"
langchain-openai = "^0.1.8"
langchain-text-splitters = "^0.2.0"
streamlit = "^1.35.0"
lxml = "^5.2.2"
chromadb = "^0.3.29"
sentence-transformers = "^3.0.0"
docarray = "^0.40.0"
torch = "^2.3.1"
pypdf = "^4.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
