[tool.poetry]
name = "streamlitapp"
version = "0.1.0"
description = ""
authors = ["Kelvin Ndeti <kelvinndeti3142@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.3"
langchain-core = "^0.3.10"
langchain-community = "^0.3.2"
langchain-openai = "^0.2.2"
langchain-text-splitters = "^0.3.0"
streamlit = "^1.39.0"
chromadb = "^0.5.13"
requests = "^2.32.3"
sentence-transformers = "^3.2.0"
langchain-nvidia-ai-endpoints = "^0.3.0"
torch = "^2.4.1"
pypdf = "^5.0.1"
lxml = "^5.3.0"
docarray = "^0.40.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
